feat(user): add otp code verification during sign up
Add validation during user creation: passwords, unique user

Related: #6
