# internal/service/user/dto/get_otp_request.go
@@ -1,5 +1,5 @@
 package dto
 
 type UserGetOtpRequest struct {
-	PhoneNumber string `json:"phone_number" binding:"required,max=12,min=9"`
+	PhoneNumber string `json:"phoneNumber" binding:"required,max=12,min=9"`
 }
